# easypy2

./: data.csv  docker-compose.yaml  pyproject.toml
.docker/: entrypoint.sh
src/: to_influx.py  to_influx2.py  to_influx3.py  to_influx4.py  to_mysql.py
